--- a/Kamiński_Fołtyn_project2.ipynb
+++ b/Kamiński_Fołtyn_project2.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "1c74ba72-3d13-4219-bcc7-4e424387a8b8",
    "metadata": {},
    "outputs": [],
@@ -890,23 +890,25 @@
     "    def __init__(self, A, gamma, eps = 1e-10, seed=None):\n",
     "        self.A = A\n",
     "        self.gamma = gamma\n",
-    "        self.classes = [i for i in range(len(A))]\n",
-    "        self.eps = eps\n",
-    "        self.communities = [[i] for i in range(len(self.classes))]\n",
+    "        self.classes = [i for i in range(len(A))] # communities assignments, at first -- each node to different community\n",
+    "        self.eps = eps # for stopping condition\n",
+    "        self.communities = [[i] for i in range(len(self.classes))] # final communities\n",
     "        if seed:\n",
     "            random.seed(seed)\n",
     "\n",
     "    def run_algorithm(self):\n",
+    "        # main algorithm function, implements version from https://www.biorxiv.org/content/10.1101/089011v1.full\n",
     "        A, classes = self.A, self.classes\n",
     "        rowsum = A.sum().to_numpy()[np.newaxis]\n",
-    "        rowcolsums = pd.DataFrame(np.matmul(rowsum.T, rowsum))\n",
+    "        rowcolsums = pd.DataFrame(np.matmul(rowsum.T, rowsum)) # matrix witk k_ik_j, for speeding up Q computation\n",
     "        Q_prev = -1\n",
     "        Q_curr = self.compute_Q(A, classes, rowcolsums)\n",
     "        while Q_curr - Q_prev > self.eps:\n",
     "            Q_prev = Q_curr\n",
-    "            rand_idx = list(range(len(classes)))\n",
+    "            rand_idx = list(range(len(classes))) # We permute indexes randomly each time\n",
     "            random.shuffle(rand_idx)\n",
     "            for i in rand_idx:\n",
+    "                # switching left/right neighbour and comparing if Q increased\n",
     "                i_left = max(0, i-1)\n",
     "                i_right = min(len(rand_idx)-1, i+1)\n",
     "                \n",
@@ -930,11 +932,11 @@
     "                break\n",
     "            print(f\"Current Q: {Q_curr}\")\n",
     "            print(f\"Prev Q: {Q_prev}\")\n",
-    "            #Q_curr = self.compute_Q(A, classes)\n",
     "        return self.communities\n",
     "                \n",
     "\n",
     "    def consolidate_communities(self, A, classes):\n",
+    "        # Communities consolidation - we recalculate A and classes so that we get A and classes for new communities\n",
     "        new_classes = []\n",
     "        indices = []\n",
     "        curr_indices = []\n",
@@ -969,6 +971,7 @@
     "\n",
     "\n",
     "    def update_global_communities(self, indices):\n",
+    "        # updating global communities assignments\n",
     "        new_communities = [[] for _ in range(len(indices))]\n",
     "        for i in range(len(indices)):\n",
     "            for j in indices[i]:\n",
@@ -977,15 +980,17 @@
     "        self.communities = new_communities\n",
     "                \n",
     "    def compute_Q(self, A, classes, rowcolsums):\n",
+    "        # Q computation from the formula from article -- as of now too slow, needs speeding up\n",
     "        Q = 0\n",
     "        m = A.to_numpy().sum()\n",
     "        for i in range(len(A)):\n",
     "            for j in range(i, len(A)):\n",
-    "                Q += (A.iloc[i,j] - self.gamma*(rowcolsums.iloc[i,j])/m)*self.sigma(i, j, classes)\n",
+    "                Q += (A.iloc[i,j] - self.gamma*(rowcolsums.iloc[i,j])/m)*self.delta(i, j, classes)\n",
     "\n",
     "        return Q/m\n",
     "\n",
-    "    def sigma(self, i, j, classes):\n",
+    "    def delta(self, i, j, classes):\n",
+    "        # for computing the delta component from the formula\n",
     "        return int(classes[i] == classes[j])"
    ]
   },
