communities classfication fix

--- a/Kamiński_Fołtyn_project2.ipynb
+++ b/Kamiński_Fołtyn_project2.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 114,
    "id": "1c74ba72-3d13-4219-bcc7-4e424387a8b8",
    "metadata": {},
    "outputs": [],
@@ -964,13 +964,12 @@
     "        # checking if the last element was not same as next-to last\n",
     "        if not eq:\n",
     "            indices.append([len(classes) - 1])\n",
-    "            new_classes.append(len(classes) - 1)\n",
+    "            \n",
     "        else:\n",
     "            curr_indices.append(len(classes) - 1)\n",
     "            indices.append(curr_indices)\n",
-    "        print(indices)\n",
-    "        print(classes)\n",
-    "        print(new_classes)\n",
+    "        new_classes.append(len(classes) - 1)\n",
+    "\n",
     "\n",
     "        new_A = pd.DataFrame(np.zeros((len(new_classes), len(new_classes))))\n",
     "        for i in range(len(indices)):\n",
@@ -1003,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 115,
    "id": "b37ee8da-3be4-467f-b71b-398565d7f829",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 116,
    "id": "991c8461-2ae9-4f73-8726-809bd1c5428b",
    "metadata": {},
    "outputs": [
@@ -1021,30 +1020,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1], [2, 3], [4, 5], [6, 7, 8], [9, 10], [11, 12], [13, 14, 15], [16, 17], [18, 19], [20, 21], [22, 23], [24, 25], [26, 27], [28], [29], [30], [31, 32], [33], [34, 35, 36], [37, 38, 39, 40]]\n",
-      "[1, 1, 2, 2, 4, 4, 8, 8, 8, 10, 10, 12, 12, 13, 13, 13, 17, 17, 19, 19, 20, 20, 22, 22, 24, 24, 27, 27, 28, 29, 30, 31, 31, 34, 36, 36, 36, 40, 40, 40, 40]\n",
-      "[1, 2, 4, 8, 10, 12, 13, 17, 19, 20, 22, 24, 27, 28, 29, 30, 31, 34, 36]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 19 is out of bounds for axis 0 with size 19",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/indexes/range.py:1018\u001b[0m, in \u001b[0;36mRangeIndex.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1017\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1018\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_range\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnew_key\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m   1019\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[0;31mIndexError\u001b[0m: range object index out of range",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[113], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m communities \u001b[38;5;241m=\u001b[39m \u001b[43mlv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_algorithm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[111], line 52\u001b[0m, in \u001b[0;36mModLouvien.run_algorithm\u001b[0;34m(self, verbose)\u001b[0m\n\u001b[1;32m     49\u001b[0m         classes \u001b[38;5;241m=\u001b[39m classes_right\n\u001b[1;32m     50\u001b[0m         Q_curr \u001b[38;5;241m=\u001b[39m Q_right\n\u001b[0;32m---> 52\u001b[0m A, classes, rowcolsums \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconsolidate_communities\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclasses\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(classes) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[111], line 90\u001b[0m, in \u001b[0;36mModLouvien.consolidate_communities\u001b[0;34m(self, A, classes)\u001b[0m\n\u001b[1;32m     88\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m indices[i]:\n\u001b[1;32m     89\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m indices[j]:\n\u001b[0;32m---> 90\u001b[0m                 \u001b[43mnew_A\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m A\u001b[38;5;241m.\u001b[39miloc[k, l]\n\u001b[1;32m     91\u001b[0m rowsum \u001b[38;5;241m=\u001b[39m new_A\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39mto_numpy()[np\u001b[38;5;241m.\u001b[39mnewaxis]\n\u001b[1;32m     92\u001b[0m rowcolsums \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(np\u001b[38;5;241m.\u001b[39mmatmul(rowsum\u001b[38;5;241m.\u001b[39mT, rowsum))\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/indexing.py:1183\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1181\u001b[0m     key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(com\u001b[38;5;241m.\u001b[39mapply_if_callable(x, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m key)\n\u001b[1;32m   1182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_scalar_access(key):\n\u001b[0;32m-> 1183\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtakeable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_takeable\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1184\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_tuple(key)\n\u001b[1;32m   1185\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1186\u001b[0m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/frame.py:4199\u001b[0m, in \u001b[0;36mDataFrame._get_value\u001b[0;34m(self, index, col, takeable)\u001b[0m\n\u001b[1;32m   4180\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   4181\u001b[0m \u001b[38;5;124;03mQuickly retrieve single value at passed column and index.\u001b[39;00m\n\u001b[1;32m   4182\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4196\u001b[0m \u001b[38;5;124;03m`self.columns._index_as_unique`; Caller is responsible for checking.\u001b[39;00m\n\u001b[1;32m   4197\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   4198\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m takeable:\n\u001b[0;32m-> 4199\u001b[0m     series \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ixs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4200\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m series\u001b[38;5;241m.\u001b[39m_values[index]\n\u001b[1;32m   4202\u001b[0m series \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_item_cache(col)\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/frame.py:3996\u001b[0m, in \u001b[0;36mDataFrame._ixs\u001b[0;34m(self, i, axis)\u001b[0m\n\u001b[1;32m   3992\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[1;32m   3994\u001b[0m \u001b[38;5;66;03m# icol\u001b[39;00m\n\u001b[1;32m   3995\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 3996\u001b[0m     label \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m   3998\u001b[0m     col_mgr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mgr\u001b[38;5;241m.\u001b[39miget(i)\n\u001b[1;32m   3999\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_box_col_values(col_mgr, i)\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/indexes/range.py:1020\u001b[0m, in \u001b[0;36mRangeIndex.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1018\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_range[new_key]\n\u001b[1;32m   1019\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 1020\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\n\u001b[1;32m   1021\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is out of bounds for axis 0 with size \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1022\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   1023\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_scalar(key):\n\u001b[1;32m   1024\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\n\u001b[1;32m   1025\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124monly integers, slices (`:`), \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1026\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mellipsis (`...`), numpy.newaxis (`None`) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1027\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand integer or boolean \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1028\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marrays are valid indices\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1029\u001b[0m     )\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 19 is out of bounds for axis 0 with size 19"
+      "Current Q: 0.6299012897558985\n",
+      "Prev Q: 0.5556543985650151\n",
+      "Current Q: 0.6348274237283418\n",
+      "Prev Q: 0.6299012897558985\n",
+      "Current Q: 0.6348274237283418\n",
+      "Prev Q: 0.6348274237283418\n"
      ]
     }
    ],
@@ -1054,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 117,
    "id": "a63663a5-bba6-4db2-a83a-f4fda17b6fdb",
    "metadata": {},
    "outputs": [
@@ -1066,8 +1047,10 @@
        " [4, 5],\n",
        " [6, 7, 8],\n",
        " [9, 10],\n",
-       " [11, 12, 13],\n",
-       " [14, 15, 16, 17, 18, 19],\n",
+       " [11, 12],\n",
+       " [13, 14, 15],\n",
+       " [16, 17],\n",
+       " [18, 19],\n",
        " [20, 21, 22],\n",
        " [23, 24, 25],\n",
        " [26, 27],\n",
@@ -1075,11 +1058,10 @@
        " [29],\n",
        " [30],\n",
        " [31, 32],\n",
-       " [33, 34, 35, 36, 37],\n",
-       " [38, 40]]"
+       " [33, 34, 35, 36, 37, 38, 39, 40]]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
