--- a/Kamiński_Fołtyn_project2.ipynb
+++ b/Kamiński_Fołtyn_project2.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 133,
    "id": "1c74ba72-3d13-4219-bcc7-4e424387a8b8",
    "metadata": {},
    "outputs": [],
@@ -955,14 +955,10 @@
     "        # creating new_classes\n",
     "        for i in range(1, len(classes)):\n",
     "            curr_indices.append(i - 1)\n",
-    "\n",
     "            if classes[i - 1] != classes[i]:\n",
-    "\n",
     "                new_classes.append(classes[i - 1])\n",
     "                indices.append(curr_indices)\n",
     "                curr_indices = []\n",
-    "        # checking if the last element was not same as next-to last\n",
-    "\n",
     "        curr_indices.append(len(classes) - 1)\n",
     "        indices.append(curr_indices)\n",
     "        new_classes.append(len(classes) - 1)\n",
@@ -974,8 +970,8 @@
     "                for k in indices[i]:\n",
     "                    for l in indices[j]:\n",
     "                        new_A.iloc[i, j] += A.iloc[k, l]\n",
-    "        rowsum = new_A.sum().to_numpy()[np.newaxis]\n",
-    "        rowcolsums = pd.DataFrame(np.matmul(rowsum.T, rowsum))\n",
+    "        rowsum = new_A.sum().to_numpy()\n",
+    "        rowcolsums = pd.DataFrame(np.outer(rowsum, rowsum))\n",
     "        self.update_global_communities(indices)\n",
     "        return new_A, new_classes, rowcolsums\n",
     "\n",
@@ -999,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "id": "b37ee8da-3be4-467f-b71b-398565d7f829",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 135,
    "id": "991c8461-2ae9-4f73-8726-809bd1c5428b",
    "metadata": {},
    "outputs": [
@@ -1017,12 +1013,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Q: 0.6283581929628289\n",
+      "Current Q: 0.6239674075456016\n",
       "Prev Q: 0.5556543985650151\n",
-      "Current Q: 0.6342303241722806\n",
-      "Prev Q: 0.6283581929628289\n",
-      "Current Q: 0.6342303241722806\n",
-      "Prev Q: 0.6342303241722806\n"
+      "Current Q: 0.6372332690685212\n",
+      "Prev Q: 0.6239674075456016\n",
+      "Current Q: 0.6372332690685212\n",
+      "Prev Q: 0.6372332690685212\n"
      ]
     }
    ],
@@ -1057,6 +1053,43 @@
       ]
      },
      "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "communities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "bc759709-e79f-4ded-b35d-b8145162e62e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1],\n",
+       " [2, 3],\n",
+       " [4, 5],\n",
+       " [6, 7, 8],\n",
+       " [9, 10],\n",
+       " [11, 12],\n",
+       " [13, 14, 15, 16],\n",
+       " [17, 18, 19],\n",
+       " [20, 21, 22],\n",
+       " [23, 24, 25],\n",
+       " [26, 27],\n",
+       " [28],\n",
+       " [29],\n",
+       " [30],\n",
+       " [31, 32],\n",
+       " [33, 34],\n",
+       " [35, 36, 37, 38, 39, 40]]"
+      ]
+     },
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
