--- a/Kamiński_Fołtyn_project2.ipynb
+++ b/Kamiński_Fołtyn_project2.ipynb
@@ -886,14 +886,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "1c74ba72-3d13-4219-bcc7-4e424387a8b8",
    "metadata": {},
    "outputs": [],
@@ -910,17 +908,19 @@
     "            i for i in range(len(A))\n",
     "        ]  # communities assignments, at first -- each node to different community\n",
     "        self.eps = eps  # for stopping condition\n",
-    "        self.communities = [[i] for i in range(len(self.classes))]  # final communities\n",
+    "\n",
     "        if seed:\n",
     "            random.seed(seed)\n",
     "\n",
     "    def run_algorithm(self, verbose=False):\n",
     "        # main algorithm function, implements version from https://www.biorxiv.org/content/10.1101/089011v1.full\n",
     "        A, classes = self.A, self.classes\n",
-    "        rowsum = A.sum().to_numpy()\n",
-    "        rowcolsums = pd.DataFrame(\n",
-    "            np.outer(rowsum, rowsum)\n",
-    "        )  # matrix witk k_ik_j, for speeding up Q computation\n",
+    "        rowsum = np.sum(A, axis=1)\n",
+    "        rowcolsums = np.outer(\n",
+    "            rowsum, rowsum\n",
+    "        )\n",
+    "        self.communities = [[i] for i in range(len(self.classes))]  # final communities\n",
+    "          # matrix witk k_ik_j, for speeding up Q computation\n",
     "        Q_prev = -1\n",
     "        Q_curr = self.compute_Q(A, classes, rowcolsums)\n",
     "        while Q_curr - Q_prev > self.eps:\n",
@@ -955,6 +955,7 @@
     "            if verbose:\n",
     "                print(f\"Current Q: {Q_curr}\")\n",
     "                print(f\"Prev Q: {Q_prev}\")\n",
+    "                print(\"-------------------------\")\n",
     "        return self.communities\n",
     "\n",
     "    def consolidate_communities(self, A, classes):\n",
@@ -974,14 +975,14 @@
     "        new_classes.append(len(classes) - 1)\n",
     "\n",
     "\n",
-    "        new_A = pd.DataFrame(np.zeros((len(new_classes), len(new_classes))))\n",
+    "        new_A = np.zeros((len(new_classes), len(new_classes)))\n",
     "        for i in range(len(indices)):\n",
     "            for j in range(len(indices)):\n",
     "                for k in indices[i]:\n",
     "                    for l in indices[j]:\n",
-    "                        new_A.iloc[i, j] += A.iloc[k, l]\n",
-    "        rowsum = new_A.sum().to_numpy()\n",
-    "        rowcolsums = pd.DataFrame(np.outer(rowsum, rowsum))\n",
+    "                        new_A[i, j] += A[k, l]\n",
+    "        rowsum = np.sum(new_A, axis=1)\n",
+    "        rowcolsums = np.outer(rowsum, rowsum)\n",
     "        self.update_global_communities(indices)\n",
     "        return new_A, new_classes, rowcolsums\n",
     "\n",
@@ -997,25 +998,25 @@
     "    def compute_Q(self, A, classes, rowcolsums):\n",
     "        # Q computation from the formula from article -- using numpy einsum for faster computation\n",
     "        Q = 0\n",
-    "        m = A.to_numpy().sum()\n",
+    "        m = np.sum(A)\n",
     "        delta = np.equal.outer(classes, classes)\n",
-    "        Q = np.sum((A.values - self.gamma * rowcolsums.values / m) * delta)\n",
+    "        Q = np.sum((A - self.gamma * rowcolsums / m) * delta)\n",
     "        return Q / m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "b37ee8da-3be4-467f-b71b-398565d7f829",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv = ModLouvien(pd.DataFrame(numpy_matrix_chr4), 1.5)"
+    "lv = ModLouvien(numpy_matrix_chr4, 1.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "991c8461-2ae9-4f73-8726-809bd1c5428b",
    "metadata": {},
    "outputs": [
@@ -1023,18 +1024,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Q: 0.6177168491924218\n",
+      "Current Q: 0.6133139846583253\n",
       "Prev Q: 0.5181868605181486\n",
-      "Current Q: 0.6615692143238641\n",
-      "Prev Q: 0.6177168491924218\n",
-      "Current Q: 0.6798921855816044\n",
-      "Prev Q: 0.6615692143238641\n",
-      "Current Q: 0.684127532110919\n",
-      "Prev Q: 0.6798921855816044\n",
-      "Current Q: 0.6842021907176813\n",
-      "Prev Q: 0.684127532110919\n",
-      "Current Q: 0.6842021907176813\n",
-      "Prev Q: 0.6842021907176813\n"
+      "-------------------------\n",
+      "Current Q: 0.6613486515312564\n",
+      "Prev Q: 0.6133139846583253\n",
+      "-------------------------\n",
+      "Current Q: 0.6806322252224302\n",
+      "Prev Q: 0.6613486515312564\n",
+      "-------------------------\n",
+      "Current Q: 0.6807068838291923\n",
+      "Prev Q: 0.6806322252224302\n",
+      "-------------------------\n",
+      "Current Q: 0.6807068838291923\n",
+      "Prev Q: 0.6807068838291923\n",
+      "-------------------------\n"
      ]
     }
    ],
@@ -1044,33 +1048,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "a63663a5-bba6-4db2-a83a-f4fda17b6fdb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
-       " [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25],\n",
-       " [26, 27, 28, 29, 30, 31, 32],\n",
+       "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],\n",
+       " [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26],\n",
+       " [27],\n",
+       " [28],\n",
+       " [29],\n",
+       " [30],\n",
+       " [31, 32],\n",
        " [33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43],\n",
        " [44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58],\n",
        " [59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70],\n",
        " [71, 72, 73, 74, 75, 76],\n",
-       " [77, 78, 79, 80, 81, 82, 83, 84],\n",
-       " [85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98],\n",
+       " [77, 78, 79, 80, 81, 82],\n",
+       " [83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98],\n",
        " [99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112],\n",
-       " [113, 114, 115],\n",
-       " [116, 117, 118],\n",
+       " [113],\n",
+       " [114, 115, 116, 117, 118],\n",
        " [119, 120, 121, 122, 123, 124, 125, 126],\n",
        " [127, 128, 129, 130, 131],\n",
-       " [132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144],\n",
-       " [145, 146, 147, 148, 149, 150, 151, 152, 153],\n",
+       " [132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142],\n",
+       " [143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153],\n",
        " [154, 155, 156, 157, 158, 159, 160]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1089,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
+   "id": "81de30fc-792f-4e3f-be66-4d419f6eb9e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1,2,3], [2,3,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2081c25d-354f-48d0-942e-2b78652fcd1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 9])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(a, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "aa0cb9da-547f-43c4-8d86-b63faf0b0219",
    "metadata": {},
    "outputs": [],
@@ -1096,54 +1135,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "4362f878-f8e8-403d-b696-782fbdf0ba0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coords = communities_to_coords(communities, RESOLUTION)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "630c55b8-60fd-46ac-ab49-14dad3edf4ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[0, 500000],\n",
-       " [550000, 1250000],\n",
+       " [550000, 950000],\n",
+       " [1000000, 1250000],\n",
        " [1300000, 1600000],\n",
        " [1650000, 2150000],\n",
        " [2200000, 2900000],\n",
-       " [2950000, 3500000],\n",
-       " [3550000, 3800000],\n",
-       " [3850000, 4200000],\n",
+       " [2950000, 3550000],\n",
+       " [3600000, 3600000],\n",
+       " [3650000, 4200000],\n",
        " [4250000, 4900000],\n",
        " [4950000, 5600000],\n",
-       " [5650000, 5750000],\n",
-       " [5800000, 5900000],\n",
+       " [5650000, 5650000],\n",
+       " [5700000, 5900000],\n",
        " [5950000, 6300000],\n",
-       " [6350000, 6550000],\n",
-       " [6600000, 7200000],\n",
-       " [7250000, 7650000],\n",
+       " [6350000, 7050000],\n",
+       " [7100000, 7650000],\n",
        " [7700000, 8000000]]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coords"
+    "communities_to_coords(communities, RESOLUTION)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "451be627",
    "metadata": {},
    "outputs": [
@@ -1151,22 +1180,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "107 ms ± 3.14 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "67.9 ms ± 6.09 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "ModLouvien(pd.DataFrame(numpy_matrix_chr4), 1.5).run_algorithm(verbose=False)"
+    "ModLouvien(numpy_matrix_chr4, 1.5).run_algorithm(verbose=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00e6bb5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
