add some comments

--- a/Kamiński_Fołtyn_project2.ipynb
+++ b/Kamiński_Fołtyn_project2.ipynb
@@ -160,6 +160,7 @@
     "\n",
     "# helper function for plotting\n",
     "def plot_hic_map(dense_matrix, maxcolor, tads = None):\n",
+    "    # TAD communities and matrix must be on the same resolution, otherwise it wont work\n",
     "    fig, ax = plt.subplots()\n",
     "    ax.matshow(dense_matrix, cmap=REDMAP, vmin=0, vmax=maxcolor)\n",
     "    if tads:\n",
@@ -838,9 +839,9 @@
     "        rowsum = np.sum(A, axis=1)\n",
     "        rowcolsums = np.outer(\n",
     "            rowsum, rowsum\n",
-    "        )\n",
+    "        ) # matrix witk k_ik_j, for speeding up Q computation\n",
     "        self.communities = [[i] for i in range(len(self.classes))]  # final communities\n",
-    "          # matrix witk k_ik_j, for speeding up Q computation\n",
+    "          \n",
     "        Q_prev = -1\n",
     "        Q_curr = self.compute_Q(A, classes, rowcolsums)\n",
     "        while Q_curr - Q_prev > self.eps:\n",
