add jaccard index calculation

--- a/Kamiński_Fołtyn_project2_clean.ipynb
+++ b/Kamiński_Fołtyn_project2_clean.ipynb
@@ -21,6 +21,7 @@
     "import random\n",
     "\n",
     "import cooler\n",
+    "import geopandas\n",
     "import hicstraw\n",
     "import juicebox_notebook\n",
     "import matplotlib.patches as patches\n",
@@ -29,6 +30,7 @@
     "import pandas as pd\n",
     "from hic2cool import hic2cool_convert\n",
     "from matplotlib.colors import LinearSegmentedColormap\n",
+    "from shapely.geometry import Polygon\n",
     "from sklearn.metrics import adjusted_rand_score"
    ]
   },
@@ -525,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "d2fc5603",
    "metadata": {},
    "outputs": [],
@@ -647,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "80bcfbaa",
    "metadata": {},
    "outputs": [],
@@ -668,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "4ff80eb1",
    "metadata": {},
    "outputs": [],
@@ -781,8 +783,296 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "7f27493c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "communities = pd.read_csv(\n",
+    "    \"communities_chr7_1.5_50000.bed\",\n",
+    "    sep=\"\\t\",\n",
+    "    header=None,\n",
+    "    comment=\"#\",\n",
+    "    names=[\"chr\", \"x1\", \"x2\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e89f88c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrow_communities = pd.read_csv(\n",
+    "    \"chr7/50000_blocks.bedpe\",\n",
+    "    sep=\"\\t\",\n",
+    "    header=None,\n",
+    "    comment=\"#\",\n",
+    "    usecols=range(3),\n",
+    "    names=[\"chr\", \"x1\", \"x2\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9dd16644",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chr</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>99350000</td>\n",
+       "      <td>102450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>45350000</td>\n",
+       "      <td>47850000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>155000000</td>\n",
+       "      <td>156750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>70800000</td>\n",
+       "      <td>72600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>40150000</td>\n",
+       "      <td>43450000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   chr         x1         x2\n",
+       "0    7   99350000  102450000\n",
+       "1    7   45350000   47850000\n",
+       "2    7  155000000  156750000\n",
+       "3    7   70800000   72600000\n",
+       "4    7   40150000   43450000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrow_communities.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "494662ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chr</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>chr7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>chr7</td>\n",
+       "      <td>6750000</td>\n",
+       "      <td>21250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>chr7</td>\n",
+       "      <td>21300000</td>\n",
+       "      <td>29650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>chr7</td>\n",
+       "      <td>29700000</td>\n",
+       "      <td>44600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>chr7</td>\n",
+       "      <td>44650000</td>\n",
+       "      <td>58600000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    chr        x1        x2\n",
+       "0  chr7         0   6700000\n",
+       "1  chr7   6750000  21250000\n",
+       "2  chr7  21300000  29650000\n",
+       "3  chr7  29700000  44600000\n",
+       "4  chr7  44650000  58600000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "communities.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cc73e657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_shapes(df_bed: pd.DataFrame) -> list[Polygon]:\n",
+    "    shapes = []\n",
+    "    for _, row in df_bed.iterrows():\n",
+    "        shapes.append(\n",
+    "            Polygon(\n",
+    "                [\n",
+    "                    (row[\"x1\"], row[\"x1\"]),\n",
+    "                    (row[\"x1\"], row[\"x2\"]),\n",
+    "                    (row[\"x2\"], row[\"x2\"]),\n",
+    "                    (row[\"x2\"], row[\"x1\"]),\n",
+    "                ]\n",
+    "            )\n",
+    "        )\n",
+    "    return shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d356262",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comm_series = geopandas.GeoSeries(create_shapes(communities))\n",
+    "arrow_series = geopandas.GeoSeries(create_shapes(arrow_communities))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "975d6494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comm_frame = geopandas.GeoDataFrame(comm_series, columns=[\"geometry\"])\n",
+    "arrow_frame = geopandas.GeoDataFrame(arrow_series, columns=[\"geometry\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7c2d5fc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "union = comm_frame.overlay(arrow_frame, how=\"union\", keep_geom_type=False).area.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ddda1e57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersection = comm_frame.overlay(\n",
+    "    arrow_frame, how=\"intersection\", keep_geom_type=False\n",
+    ").area.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b848024b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaccard index = 14.27%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Jaccard index = {(intersection / union):.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "77ba4c3d",
+   "id": "84beaa4f",
    "metadata": {},
    "outputs": [],
    "source": []
